# RAG-Document-Parsers

./: main.py  pyproject.toml
notebooks/: docling_document_parsing.ipynb  llamaparse_document_parsing.ipynb  unstructured_document_parsing.ipynb
notebooks/chroma_db/: chroma.sqlite3
notebooks/output/: docling_paper.html  docling_paper.json  docling_paper.md
sample_documents/: sample1.docx  sample1.pptx  sample1.xlsx
