[project]
name = "rag-document-parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.6",
    "docling[asr,easyocr,vlm]>=2.55.1",
    "docling-core[chunking]>=2.55.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.1.2",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.15",
    "unstructured-inference>=1.1.2",
    "ipykernel>=7.1.0",
]
