[project]
name = "rag-document-parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.6",
    "docling[asr,easyocr,vlm]>=2.55.1",
    "docling-core[chunking]>=2.55.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.1.2",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.15",
    "unstructured-inference>=1.1.2",
    "ipykernel>=7.1.0",
    "llama-cloud-services>=0.6.6",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-embeddings-openai>=0.5.1",
    "nest-asyncio>=1.6.0",
    "llama-index-llms-openai>=0.6.11",
    "transformers>=4.57.3",
    "sentence-transformers>=5.2.0",
    "llama-index>=0.10.55",
    "langchain-chroma>=1.1.0",
]
